...
              decoration: BoxDecoration(
                border: Border.all(width: 1.0, color: Colors.black),
              ),
              child: ListTile(
                title: Text(
                  _todoViewModel.getAllTodo()[index].title,
                  key: const Key('todoTitle'),
                ),
                subtitle:
                    Text(_todoViewModel.getAllTodo()[index].toStringDeadline()),
                trailing: PopupMenuButton<String>(
                  onSelected: (String selected) {
                    popUpMenuSelected(selected, index);
...
            _todoViewModel.addTodo(todo);
            setState(() {});
          }
        },
        tooltip: '追加',
        child: const Icon(Icons.add),
        key: const Key('add'),
      ),
    );
  }

  void popUpMenuSelected(String selected, int index) async {
    switch (selected) {
...
